--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ECommerceBackEnd",
   "version": "1.0.0",
-  "description": "An ORM based project for an e-commerce site",
+  "description": "An ORM based project for an e-commerce site. Backend only, no front end.",
   "main": "server.js",
   "scripts": {
     "dev": "npm run seed && npm run watch",
