Fixed add product route by dropping bulk create w/ ids

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-backend",
+  "name": "e-commerce-backend",
   "version": "1.0.0",
   "description": "An ORM based project for an e-commerce site. Backend only, no front end.",
   "main": "server.js",
